--- a/app/page.module.css
+++ b/app/page.module.css
@@ -58,8 +58,14 @@
   margin-top: 3rem;
 }
 
+.mainApp .phoneNumber{
+  margin-top: 2rem;
+  padding: 10px;
+  width: 100%;
+  border-radius: 8px;
+}
 .mainApp .textArea{
-  margin-top: 4rem;
+  margin-top: 1rem;
   width: 100%;
   min-height: 200px;
   border-radius: 8px;
@@ -84,3 +90,69 @@
   margin-top: 1rem;
 
 }
+
+
+/* Link modal */
+
+.linkModal{
+  
+  /* From https://css.glass */
+  background: rgba(9, 85, 0, 0.16);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.8px);
+  -webkit-backdrop-filter: blur(8.8px);
+
+
+
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  word-wrap: break-word;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
+
+.linkBox{
+  background: #fff;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 1rem;
+}
+.linkBox span{
+  margin: 1rem;
+  margin-bottom: 2rem;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.link{
+  width: 100vw;
+  height: auto;
+  font-size: 14px;
+  color: #000;
+  word-wrap: break-word;
+  width: auto;
+  cursor: pointer;
+}
+
+.linkBox button{
+  margin-top: 1rem;
+  width: 50%;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+
