--- a/app/page.module.css
+++ b/app/page.module.css
@@ -103,7 +103,7 @@
   backdrop-filter: blur(8.8px);
   -webkit-backdrop-filter: blur(8.8px);
 
-  width: 300px;
+  width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
@@ -123,6 +123,9 @@
   border-radius: 8px;
   word-wrap: break-word;
   padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
@@ -131,17 +134,17 @@
   margin-bottom: 2rem;
   font-size: 20px;
   font-weight: bold;
-  width: 300px;
+  word-wrap: break-word;
 }
 
 .link{
-  width: 300px;
+  width: 100%;
   height: auto;
   font-size: 14px;
   color: #000;
   word-wrap: break-word;
-  width: auto;
   cursor: pointer;
+
 }
 
 .linkBox button{
